# rgwfuncs

./: .flake8  .gitignore  README.md  deploy_locally.py  deploy_on_pypi.py  fmt.sh  local_upgrade.py  local_upgrade.sh  publish.py  pyproject.toml  setup.cfg  upload.py  upload.sh
src/rgwfuncs/: __init__.py  algebra_lib.py  df_lib.py  docs_lib.py  interactive_shell_lib.py  str_lib.py
tests/: test_algebra_lib.py
tests/automated_tests/: test_algebra_lib.py
tests/manual_tests/: manually_test_interactive_shell.py  manually_test_plot_polynomial_functions.py  manually_test_plot_x_points_of_polynomial_functions.py  manually_test_str_lib_as_module.py  test.py
tests/str_lib/: test_send_telegram_message.py  test_title_heading_sub_heading.py
