[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgwfuncs"
version = "0.0.19"
authors = [
  { name = "Ryan Gerard Wilson", email = "ryangerardwilson@gmail.com" },
]
description = "A functional programming paradigm for mathematical modelling and data science"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pymssql",
    "mysql-connector-python",
    "clickhouse-connect",
    "google-cloud-bigquery",
    "google-auth",
    "xgboost",
    "requests",
    "slack-sdk",
    "google-api-python-client",
]

dynamic = ["scripts"]

[project.urls]
Homepage = "https://github.com/ryangerardwilson/rgwfuncs"
Issues = "https://github.com/ryangerardwilson/rgwfuncs"

[tool.setuptools.packages.find]
where = ["src"]

