[metadata]
name = rgwfuncs
version = 0.0.1
author = Ryan Gerard Wilson
author_email = ryangerardwilson@gmail.com
description = A functional programming paradigm for mathematical modelling and data science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryangerardwilson/rgwfunc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pandas
    numpy<2.0.0
    pymssql
    mysql-connector-python
    clickhouse-connect
    google-cloud-bigquery
    google-auth
    google-cloud-storage
    google-auth-oauthlib 
    google-auth-httplib2 
    google-api-python-client
    pandas-gbq
    xgboost
    matplotlib
    pillow
    scipy
    seaborn
    scikit-learn
    pyarrow
    distributed
    requests
    pymysql
    tables
    openai
    filetype
    tqdm
    requests-html
    openai-whisper
    slack-sdk
    lxml[html_clean]

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rgwfuncs = rgwfuncs:main


