[metadata]
name = rgwfuncs
version = 0.0.52
author = Ryan Gerard Wilson
author_email = ryangerardwilson@gmail.com
description = A functional programming paradigm for mathematical modelling and data science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryangerardwilson/rgwfunc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pandas
    pymssql
    mysql-connector-python
    clickhouse-connect
    google-cloud-bigquery
    google-auth
    xgboost
    requests
    slack-sdk
    google-api-python-client
    boto3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rgwfuncs = rgwfuncs:main


